--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,12 @@
 /* Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@500;600&display=swap");
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-*/ body {
+/* body {
   font-family: "Inter", sans-serif;
-}
+} */
 
 /* Font utilities */
 .font-poppins {
